deploy/smhiextractor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
#https://andrewlock.net/deploying-asp-net-core-applications-to-kubernetes-part-6-adding-health-checks-with-liveness-readiness-and-startup-probes/
#https://dzone.com/articles/health-checks-with-aspnet-core-and-kubernetes

metadata:
  name: smhiextractor
  labels:
    app: smhiextractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smhiextractor
  template:
    metadata:
      labels:
        app: smhiextractor
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: smhiextractor
        image: k3d-k3slocal-registry:5000/smhiextractor:#{Build.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        #- containerPort: 443
        #  name: https
        livenessProbe:
          httpGet:
            path: /healthy
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          #limits:
          #  memory: "128Mi"
          #  cpu: "512m"
