deploy/smhiextractor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smhiextractor
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "smhiextractor.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: smhiextractor
            port:
              number: 80
